--- a/css-friends-11/skeleton/css/11-icons.css
+++ b/css-friends-11/skeleton/css/11-icons.css
@@ -1,1 +1,11 @@
 /* PHASE 11: Icons */
+[class*="icon-"] {
+  display: inline-block;
+  background-image: url(../docs/images/sprite.png);
+  background-size: 25px 250px;
+  background-repeat: no-repeat;
+  vertical-align: bottom;
+  overflow: hidden;
+  height: 0;
+  width: 25px;
+}
